--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 .title {
 	color: #000;
-	font-size: 2.5rem;
+	font-size: clamp(2rem, 0.9091vw + 1.8182rem, 2.5rem);
 	font-weight: 600;
 	line-height: calc(55 / 40 * 100%);
 }
