--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
 }
 
 .body-main-screen__btn:active {
-	background-color: #ff361f;
+	background-color: #b9473a;
 }
 
 .body-main-screen__swiper {
@@ -227,7 +227,7 @@ body {
 	}
 
 	.body-main-screen__btn:hover {
-		background-color: #ff361f;
+		background-color: #b9473a;
 	}
 }
 
@@ -300,18 +300,23 @@ body {
 }
 
 .how__title:not(:last-child) {
-	margin-bottom: 4.375rem;
+	margin-bottom: clamp(2rem, 4.3182vw + 1.1364rem, 4.375rem);
 }
 
 .how__body {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(3, minmax(auto, 16.25rem));
 	grid-auto-rows: auto;
-	gap: 2rem clamp(3rem, 31.1111vw + -13.3333rem, 10rem);
+	justify-content: space-between;
+	/* gap: 2rem clamp(3rem, 31.1111vw + -13.3333rem, 10rem); */
+	gap: 3rem 2rem;
+	padding: 0rem 2.1875rem;
 }
 
 .item-how {
 	text-align: center;
+	min-height: 100%;
+	position: relative;
 }
 
 .item-how__icon {
@@ -326,14 +331,32 @@ body {
 
 .item-how__icon--violet {
 	background-color: #9672ff;
+	box-shadow: 0px 100px 80px rgba(150, 114, 255, 0.07),
+		0px 64.8148px 46.8519px rgba(150, 114, 255, 0.0531481),
+		0px 38.5185px 25.4815px rgba(150, 114, 255, 0.0425185),
+		0px 20px 13px rgba(150, 114, 255, 0.035),
+		0px 8.14815px 6.51852px rgba(150, 114, 255, 0.0274815),
+		0px 1.85185px 3.14815px rgba(150, 114, 255, 0.0168519);
 }
 
 .item-how__icon--blue {
 	background-color: #4ddffd;
+	box-shadow: 0px 100px 80px rgba(77, 223, 253, 0.07),
+		0px 64.8148px 46.8519px rgba(77, 223, 253, 0.0531481),
+		0px 38.5185px 25.4815px rgba(77, 223, 253, 0.0425185),
+		0px 20px 13px rgba(77, 223, 253, 0.035),
+		0px 8.14815px 6.51852px rgba(77, 223, 253, 0.0274815),
+		0px 1.85185px 3.14815px rgba(77, 223, 253, 0.0168519);
 }
 
 .item-how__icon--pink {
 	background-color: #f2b8ec;
+	box-shadow: 0px 100px 80px rgba(242, 184, 236, 0.07),
+		0px 64.8148px 46.8519px rgba(242, 184, 236, 0.0531481),
+		0px 38.5185px 25.4815px rgba(242, 184, 236, 0.0425185),
+		0px 20px 13px rgba(242, 184, 236, 0.035),
+		0px 8.14815px 6.51852px rgba(242, 184, 236, 0.0274815),
+		0px 1.85185px 3.14815px rgba(242, 184, 236, 0.0168519);
 }
 
 .item-how__icon:not(:last-child) {
@@ -358,4 +381,456 @@ body {
 
 .item-how__text > p {
 	line-height: calc(26 / 16 * 100%);
+}
+
+@media (min-width: 75rem) {
+	.item-how:not(:last-child)::before {
+		content: url('../icons/line-dashed.svg');
+		position: absolute;
+		top: 2.5625rem;
+		right: 0;
+		width: 13.125rem;
+		height: 0.6875rem;
+		transform: translateX(87%) rotate(0);
+	}
+
+	.item-how:nth-child(2)::before {
+		transform: translateX(87%) rotate(180deg);
+		top: 2.8625rem;
+	}
+}
+
+/* @media (min-width: 57.5em) {
+	.item-how__line {
+		position: absolute;
+		top: 2.5625rem;
+		right: 0;
+		max-width: clamp(9.125rem, 22.8571vw + -4.0179rem, 13.125rem);
+		width: 100%;
+		height: 0.1875rem;
+		background: linear-gradient(
+			90deg,
+			rgba(150, 114, 255, 0.2) 5%,
+			rgba(77, 223, 253, 0.2) 100%
+		);
+		transform: translateX(88%) rotate(0);
+	}
+
+	.item-how__line--rotate {
+		transform: translateX(88%) rotate(180deg);
+	}
+
+	.item-how__line > span {
+		width: 0.6875rem;
+		height: 0.6875rem;
+		position: absolute;
+		border-radius: 50%;
+		top: 50%;
+		transform: translateY(-50%);
+	}
+
+	.item-how__line > span:nth-child(1) {
+		background-color: #9672ff;
+		left: 0;
+	}
+
+	.item-how__line > span:nth-child(2) {
+		background-color: #4ddffd;
+		right: 0;
+	}
+} */
+
+@media (max-width: 57.4em) {
+	.how__body {
+		grid-template-columns: repeat(2, 1fr);
+		padding: 0;
+	}
+}
+
+@media (max-width: 35.625em) {
+	.how__body {
+		grid-template-columns: auto;
+		row-gap: 2rem;
+	}
+
+	.item-how__icon:not(:last-child) {
+		margin-bottom: 1.5rem;
+	}
+}
+
+.deals {
+	padding-top: clamp(2.5rem, 7.9545vw + 0.9091rem, 6.875rem);
+	padding-bottom: clamp(2.5rem, 7.9545vw + 0.9091rem, 6.875rem);
+}
+
+.header-deals {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.header-deals:not(:last-child) {
+	margin-bottom: 3.125rem;
+}
+
+.header-deals__inner {
+	flex: 1 1 auto;
+}
+
+.header-deals__title {
+	text-transform: capitalize;
+}
+
+.header-deals__title:not(:last-child) {
+	margin-bottom: 0.9375rem;
+}
+
+.header-deals__text {
+	max-width: 29.375rem;
+}
+
+.header-deals__text > p {
+	color: #000;
+	line-height: calc(24 / 16 * 100%);
+}
+
+.header-deals__btn {
+	align-self: flex-start;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 4.0625rem;
+	padding: 0.3125rem 2.0625rem;
+	background: #f85a47;
+	box-shadow: 0px 100px 80px 0px rgba(248, 90, 71, 0.07),
+		0px 64.815px 46.852px 0px rgba(248, 90, 71, 0.05),
+		0px 38.519px 25.481px 0px rgba(248, 90, 71, 0.04),
+		0px 20px 13px 0px rgba(248, 90, 71, 0.04),
+		0px 8.148px 6.519px 0px rgba(248, 90, 71, 0.03),
+		0px 1.852px 3.148px 0px rgba(248, 90, 71, 0.02);
+	border-radius: 0.3125rem;
+	text-transform: capitalize;
+	color: #fff;
+	font-size: 1.0625rem;
+	font-weight: 500;
+	line-height: calc(23 / 17 * 100%);
+	text-wrap: nowrap;
+}
+
+.header-deals__btn:active {
+	background-color: #b9473a;
+}
+
+.tabs-deals__navigation {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.5rem 3.125rem;
+}
+
+.tabs-deals__navigation:not(:last-child) {
+	margin-bottom: 3.5625rem;
+}
+
+.tabs-deals__title {
+	color: #000;
+	font-size: 1.1875rem;
+	line-height: calc(26 / 19 * 100%);
+}
+
+.tabs-deals__title._tab-active {
+	color: #f85a47;
+	font-weight: 600;
+	position: relative;
+}
+
+.tabs-deals__title._tab-active::before {
+	content: '';
+	width: 100%;
+	height: 0.0625rem;
+	background-color: #f85a47;
+	position: absolute;
+	left: 0;
+	bottom: -0.1875rem;
+}
+
+.tabs-deals__body {
+	display: none;
+}
+
+.tabs-deals__body.active {
+	display: block;
+}
+
+.tabs-deals__items {
+	display: grid;
+	grid-template-columns: repeat(3, minmax(auto, 23.125rem));
+	grid-auto-rows: auto;
+	justify-content: space-between;
+	gap: 1rem;
+}
+
+.tabs-deals__item {
+	position: relative;
+	border-radius: 0.3125rem;
+	overflow: hidden;
+}
+
+.tabs-deals__options {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	z-index: 5;
+	top: 0.875rem;
+	left: 0.875rem;
+	gap: 0.375rem;
+}
+
+.tabs-deals__option {
+	color: #fff;
+	font-size: 0.75rem;
+	line-height: calc(16 / 12 * 100%);
+	border-radius: 0.3125rem;
+	border: 0.0625rem solid#fff;
+	background: rgba(0, 0, 0, 0.4);
+}
+
+.tabs-deals__option:nth-child(1) {
+	padding: 0.375rem 0.75rem;
+}
+
+.tabs-deals__option:nth-child(2) {
+	padding: 0.375rem 0.375rem;
+}
+
+.tabs-deals__pictures {
+	/* max-width: 100%; */
+	display: block;
+	position: relative;
+	aspect-ratio: 370 / 300;
+}
+
+.tabs-deals__img {
+	/* width: 100%;
+	height: auto;
+	object-fit: cover; */
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+}
+
+@media (hover: hover) {
+	.header-deals__btn {
+		transition: background-color 0.3s ease 0s;
+	}
+
+	.header-deals__btn:hover {
+		background-color: #b9473a;
+	}
+
+	.tabs-deals__title {
+		transition: color 0.25s ease 0s;
+		position: relative;
+	}
+
+	.tabs-deals__title::before {
+		content: '';
+		position: absolute;
+		width: 0;
+		height: 1px;
+		background-color: #f85a47;
+		bottom: -0.1875rem;
+		left: 0;
+		transition: width 0.3s ease 0s;
+	}
+
+	.tabs-deals__title:hover {
+		color: #f85a47;
+	}
+
+	.tabs-deals__title:hover::before {
+		width: 100%;
+	}
+
+	.tabs-deals__img {
+		transform: scale(1);
+		transition: transform 0.3s ease 0s;
+	}
+
+	.tabs-deals__item:hover .tabs-deals__img {
+		transform: scale(1.1);
+	}
+
+	.tabs-deals__option {
+		transition: background-color 0.3s ease 0s;
+	}
+
+	.tabs-deals__option:hover {
+		background-color: rgba(0, 0, 0, 0.6);
+	}
+}
+
+@media (max-width: 57.5rem) {
+	.tabs-deals__items {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (max-width: 44.75rem) {
+	.header-deals:not(:last-child) {
+		margin-bottom: 2.125rem;
+	}
+
+	.header-deals__btn {
+		width: 100%;
+	}
+}
+
+@media (max-width: 41.4375rem) {
+	.tabs-deals__navigation {
+		justify-content: center;
+	}
+
+	.tabs-deals__navigation:not(:last-child) {
+		margin-bottom: 2.5625rem;
+	}
+}
+
+@media (max-width: 38.75rem) {
+	.tabs-deals__items {
+		grid-template-columns: 1fr;
+		justify-content: center;
+	}
+}
+
+@media (max-width: 27.8125rem) {
+	.tabs-deals__navigation {
+		flex-direction: column;
+	}
+
+	.tabs-deals__title {
+		align-self: center;
+	}
+}
+
+.features {
+	padding-top: clamp(2.5rem, 7.9545vw + 0.9091rem, 6.875rem);
+	padding-bottom: clamp(2.5rem, 6.8182vw + 1.1364rem, 6.25rem);
+}
+
+.features__title {
+	text-align: center;
+}
+
+.features__title:not(:last-child) {
+	margin-bottom: clamp(2rem, 7.1591vw + 0.5682rem, 5.9375rem);
+}
+
+.features__body {
+	padding: 2.4375rem;
+	background-color: #f1ffff;
+	display: grid;
+	grid-template-columns: minmax(auto, 30.75rem) minmax(auto, 25.75rem);
+	grid-auto-rows: auto;
+	gap: 2rem clamp(2rem, 16.0714vw + -7.2411rem, 4.8125rem);
+}
+
+.features__pictures {
+	align-self: start;
+}
+
+.features__picture {
+	aspect-ratio: 492 / 364;
+	position: relative;
+}
+
+.features__img:first-child {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+
+.features__img:last-child {
+}
+
+.content-features {
+	padding-top: 3.125rem;
+}
+
+.content-features__header:not(:last-child) {
+	margin-bottom: 2.625rem;
+}
+
+.content-features__title {
+	color: #000;
+	font-size: 1.9375rem;
+	font-weight: 600;
+	line-height: calc(42 / 31 * 100%);
+}
+
+.content-features__title:not(:last-child) {
+	margin-bottom: 1.75rem;
+}
+
+.content-features__text {
+	max-width: 21.5rem;
+}
+
+.content-features__text > p {
+	color: #545a58;
+	line-height: calc(24 / 16 * 100%);
+}
+
+.content-features__body {
+	display: grid;
+	grid-template-columns: repeat(3, minmax(auto, 110px));
+	grid-auto-rows: auto;
+	justify-content: space-between;
+	gap: 2.3125rem 1rem;
+}
+
+.content-features__body:not(:last-child) {
+	margin-bottom: 3.375rem;
+}
+
+.item-features__name {
+	color: #000;
+	font-weight: 700;
+	font-size: 1.0625rem;
+	line-height: calc(23 / 17 * 100%);
+}
+
+.item-features__name:not(:last-child) {
+	margin-bottom: 0.75rem;
+}
+
+.item-features__value {
+	color: #545a58;
+	font-size: 1.0625rem;
+	line-height: calc(23 / 17 * 100%);
+}
+
+.content-features__btn {
+	min-height: 3.3125rem;
+	padding: 0.3125rem 2.3125rem;
+	color: #fff;
+	font-size: 1.125rem;
+	font-weight: 500;
+	line-height: calc(22 / 18 * 100%);
+	text-transform: uppercase;
+	text-wrap: nowrap;
+	border-radius: 0.3125rem;
+	background-color: #f85a47;
+	box-shadow: 0px 100px 80px 0px rgba(248, 90, 71, 0.07),
+		0px 64.815px 46.852px 0px rgba(248, 90, 71, 0.05),
+		0px 38.519px 25.481px 0px rgba(248, 90, 71, 0.04),
+		0px 20px 13px 0px rgba(248, 90, 71, 0.04),
+		0px 8.148px 6.519px 0px rgba(248, 90, 71, 0.03),
+		0px 1.852px 3.148px 0px rgba(248, 90, 71, 0.02);
 }
